springboot-postgres-full-setup/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: deepa021/springboot-postgres-full-setup-backend:1.0.0
          ports:
            - containerPort: 8080
